# api-extractor

./: .env.example  .gitignore  Makefile  README.md  config.js  package-lock.json  pyproject.toml  requirements.txt  serverless.yml
docs/: postman_collection.json
fake-api/: data.json  generate_data.py  main.py
src/api/: constants.py  main.py  repository.py  routes.py  schemas.py  utils.py
src/common/: aws.py  constants.py  logs.py  repository.py  schemas.py  secrets.py
src/extractor/: helpers.py  main.py  services.py  utils.py
src/tests/: conftest.py
src/tests/e2e/api/: test_api.py
src/tests/e2e/api_service/: config_data.json  test_api_service.py
src/tests/e2e/api_service/expected_data/: payments.csv  payments_with_mapping_fetch.csv
